--- a/idSystem/pom.xml
+++ b/idSystem/pom.xml
@@ -43,6 +43,13 @@
             <version>1.5.0-cdh5.5.0</version>
         </dependency>
 
+        <!-- hdfs -->
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+            <version>2.6.0-cdh5.5.0</version>
+        </dependency>
+
         <!--fix snappy bug in 1.0.4.1-->
         <dependency>
             <groupId>org.xerial.snappy</groupId>
