--- a/idDatabase/src/main/resources/application.properties
+++ b/idDatabase/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 ##es server
 es.strClusterName = qzt360-es
-es.astrTransportHostName = 192.168.36.27, 192.168.36.28, 192.168.36.29, 192.168.36.30
+
+## 英文逗号分隔多个
+es.strTransportHostNames = 192.168.36.27, 192.168.36.28, 192.168.36.29, 192.168.36.30
+es.strConcurrentRequests = 1
+
+##es template name 英文逗号分隔多个
+es.index.strTemplateNamePrefixs = id_database
