--- a/baSystem/webService/src/main/resources/application.properties
+++ b/baSystem/webService/src/main/resources/application.properties
@@ -8,13 +8,16 @@ es.strTransportHostNames = 192.168.36.27, 192.168.36.28, 192.168.36.29, 192.168.
 es.strConcurrentRequests = 1
 
 ##es template name 英文逗号分隔多个
-es.index.strTemplateNamePrefixs = eqp, netlog_, syslog_
+es.index.strTemplateNamePrefixs = eqp, netlog_, syslog_, id_database
 
 ## es index name
+es.index.strIdIndex = id_database
+es.index.strIdType = id_type
+
 es.index.strEqpIndex = eqp
 es.index.strEqpType = aWifi
 
-es.index.strAWifiNetlogIndexPre = netLog_
+es.index.strAWifiNetlogIndexPre = netlog_
 es.index.strAWifiNetlogType = aWifi_0001
 es.index.strAWifiOnOffLineType = aWifi_0002
 es.index.strAWifiNetIdType = aWifi_0003
