--- a/baSystem/dataService/src/main/resources/application.properties
+++ b/baSystem/dataService/src/main/resources/application.properties
@@ -8,7 +8,7 @@ es.strTransportHostNames = 192.168.36.27, 192.168.36.28, 192.168.36.29, 192.168.
 es.strConcurrentRequests = 1
 
 ##es template name 英文逗号分隔多个
-es.index.strTemplateNamePrefixs = id_database, syslog_
+es.index.strTemplateNamePrefixs = eqp, netlog_
 
 ## es index name
 es.index.strIdIndex = id_database
