--- a/kkSystem/dataService/src/main/resources/application.properties
+++ b/kkSystem/dataService/src/main/resources/application.properties
@@ -3,12 +3,12 @@ es.strClusterName = qzt360-es
 
 ## 英文逗号分隔多个
 es.strTransportHostNames = 192.168.36.27, 192.168.36.28, 192.168.36.29, 192.168.36.30
-es.strConcurrentRequests = 2
+es.strConcurrentRequests = 1
 
 ##es template name 英文逗号分隔多个
-es.index.strTemplateNamePrefixs = tmac_
+es.index.strTemplateNamePrefixs = zhaogj_tmac_
 
-es.index.strTmacLogIndexPre = tmac_
+es.index.strTmacLogIndexPre = zhaogj_tmac_
 es.index.strTmacLogType = from_hdfs
 
 ##system
