--- a/kafkaTest/java2kafka/pom.xml
+++ b/kafkaTest/java2kafka/pom.xml
@@ -52,6 +52,13 @@
             <version>1.16.10</version>
         </dependency>
 
+        <!--kafka-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>0.10.1.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
